[package]
name = "flashtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.h
resolver = "2"

[dependencies]
crc = "3.0"
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
#stm32f3xx-hal = { version = "0.9.0", features = ["rt", "stm32f334x8"] }
stm32f4xx-hal = { version = "0.13.2", features = ["rt", "stm32f411"] }
defmt = {version = "0.3.1", optional = true}
defmt-rtt = {version = "0.3.2", optional = true}
bmp280-driver = "0.0.7"
bmp280-ehal = "0.0.6"
embedded-hal = "0.2.1"
panic-probe = "0.3.0"
#bmp280 = "0.4.0"
#bmp280-ehal = "0.0.5"
#bmp280 = { version = "0.0.5", optional = true, package = "bmp280-ehal" }

[features]

default = ["defmt", "defmt-rtt"]